--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -153,73 +153,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.config
         }
-        /*stage {
-            HOCKEYAPP_APP_ID = "\"19a9fa384bab4246a43242776eb80453\""
-            buildConfigField STRING, HOCKEY_ID, HOCKEYAPP_APP_ID
-            buildConfigField STRING, TEALIUM_ENVIRONMENT, ENVIRONMENT_STAGE
-            buildConfigField STRING, TEALIUM_APP_NAME, APP_NAME_STAGE
-            buildConfigField BOOLEAN, REPORT_LOGS, FALSE
-            buildConfigField BOOLEAN, REPORT_CRASHES, TRUE
-            buildConfigField BOOLEAN, REPORT_ANALYTICS, TRUE
-            buildConfigField BOOLEAN, SHOW_SETTINGS, FALSE
-
-            buildConfigField STRING, S_OKTA_BASE_URL, DEV_OKTA_BASE_URL
-            buildConfigField STRING, S_VERSIONING_URL, STAGE_VERSIONING_URL
-            buildConfigField STRING, S_CIAM_BASE_URL, STAGE_CIAM_BASE_URL
-            buildConfigField STRING, S_S2_BASE_URL, STAGE_S2_BASE_URL
-            buildConfigField STRING, S_SCHEDULING_BASE, STAGE_SCHEDULING_BASE
-
-            buildConfigField STRING, "S_AUTH_CLIENT_ID", "\"ausb2b0jbri7MsQGl0h7\""
-            buildConfigField STRING, "S_CLIENT_ID", "\"0oab54ai6q0zFI8fq0h7\""
-            buildConfigField STRING, "S_AUTH_SCOPE", "\"openid+email+profile+offline_access+groups\""
-            buildConfigField STRING, "S_AUTH_REDIRECT_URI", "\"http://localhost:8080\""
-            buildConfigField STRING, "S_GRANT_TYPE_AUTH", "\"authorization_code\""
-            buildConfigField STRING, "S_GRANT_TYPE_REFRESH", "\"refresh_token\""
-
-
-            buildConfigField STRING, D_VERSIONING_URL, DEV_VERSIONING_URL
-            buildConfigField STRING, D_OKTA_BASE_URL, DEV_OKTA_BASE_URL
-            buildConfigField STRING, D_CIAM_BASE_URL, DEV_CIAM_BASE_URL
-            buildConfigField STRING, D_S2_BASE_URL, DEV_S2_BASE_URL
-            buildConfigField STRING, D_SCHEDULING_BASE, DEV_SCHEDULING_BASE
-
-            buildConfigField STRING, "D_AUTH_CLIENT_ID", "\"ausb2b0jbri7MsQGl0h7\""
-            buildConfigField STRING, "D_CLIENT_ID", "\"0oab54ai6q0zFI8fq0h7\""
-            buildConfigField STRING, "D_AUTH_SCOPE", "\"openid+email+profile+offline_access+groups\""
-            buildConfigField STRING, "D_AUTH_REDIRECT_URI", "\"http://localhost:8080\""
-            buildConfigField STRING, "D_GRANT_TYPE_AUTH", "\"authorization_code\""
-            buildConfigField STRING, "D_GRANT_TYPE_REFRESH", "\"refresh_token\""
-
-            buildConfigField STRING, P_VERSIONING_URL, PROD_VERSIONING_URL
-            buildConfigField STRING, P_OKTA_BASE_URL, PROD_OKTA_BASE_URL
-            buildConfigField STRING, P_CIAM_BASE_URL, PROD_CIAM_BASE_URL
-            buildConfigField STRING, P_S2_BASE_URL, PROD_S2_BASE_URL
-            buildConfigField STRING, P_SCHEDULING_BASE, PROD_SCHEDULING_BASE
-
-            buildConfigField STRING, "P_AUTH_CLIENT_ID", "\"aus32qsj5x26YmQN11t7\""
-            buildConfigField STRING, "P_CLIENT_ID", "\"0oa32qpu3nZP1BlB91t7\""
-            buildConfigField STRING, "P_AUTH_SCOPE", "\"openid+email+profile+offline_access+groups\""
-            buildConfigField STRING, "P_AUTH_REDIRECT_URI", "\"http://localhost:8080\""
-            buildConfigField STRING, "P_GRANT_TYPE_AUTH", "\"authorization_code\""
-            buildConfigField STRING, "P_GRANT_TYPE_REFRESH", "\"refresh_token\""
-
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig signingConfigs.config
-
-        }
-
-            applicationVariants.all { variant ->
-                variant.outputs.each { output ->
-                    def outputFile = output.outputFile
-                    if (outputFile != null && outputFile.name.endsWith('.apk')) {
-                        def fileName = outputFile.name.replace('.apk', "-" + defaultConfig.versionName + ".apk")
-                        output.outputFile = new File(outputFile.parent, fileName)
-                    }
-                }
-            }
-        }*/
         debug {
             HOCKEYAPP_APP_ID = "\"b51e6a79f705472fb7613985e9f82e7f\""
             buildConfigField STRING, HOCKEY_ID, HOCKEYAPP_APP_ID
@@ -277,9 +210,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 
             signingConfig signingConfigs.config
-            debuggable true
         }
-        /*developer {
+        developer {
             buildConfigField STRING, HOCKEY_ID, HOCKEYAPP_APP_ID
             buildConfigField STRING, TEALIUM_ENVIRONMENT, ENVIRONMENT_DEV
             buildConfigField STRING, TEALIUM_APP_NAME, APP_NAME_DEV
@@ -331,7 +263,7 @@ android {
 
             signingConfig signingConfigs.config
             debuggable true
-        }*/
+        }
     }
 }
 
