--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -88,6 +88,7 @@
             android:value="@string/google_maps_api_key" />
 
         <activity android:name=".features.update.UpdateActivity" />
+        <activity android:name=".features.login.verify.EmailVerifyActivity" />
         <activity
             android:name=".app.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
