--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -49,8 +49,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 25
         multiDexEnabled true
-        versionCode 103005
-        versionName "1.3.5"
+        versionCode 103006
+        versionName "1.3.6"
         setProperty("archivesBaseName", "DignityHealth-MyHome-$versionName")
 
         manifestPlaceholders = [HOCKEYAPP_APP_ID: HOCKEYAPP_APP_ID]
@@ -169,7 +169,7 @@ android {
             buildConfigField BOOLEAN, REPORT_LOGS, TRUE
             buildConfigField BOOLEAN, REPORT_CRASHES, TRUE
             buildConfigField BOOLEAN, REPORT_ANALYTICS, TRUE
-            buildConfigField BOOLEAN, SHOW_SETTINGS, FALSE
+            buildConfigField BOOLEAN, SHOW_SETTINGS, TRUE
 
 
             buildConfigField STRING, S_OKTA_BASE_URL, DEV_OKTA_BASE_URL
