--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -111,8 +111,8 @@
             <intent-filter>
                 <data
                     android:host="americanwellsdk.com"
-                    android:scheme="amwellsdk"/>
-                <category android:name="android.intent.category.BROWSABLE"/>
+                    android:scheme="amwellsdk" />
+                <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
         <activity
@@ -120,17 +120,17 @@
             android:label="@string/app_name"
             android:parentActivityName="com.americanwell.sdksample.login.LoginActivity"
             android:theme="@style/AppTheme.NoTitleBar"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.americanwell.sdksample.login.ThirdPartyLoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoTitleBar"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.americanwell.sdksample.login.GuestLoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoTitleBar"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.americanwell.sdksample.login.LoginAssistanceActivity"
             android:label="@string/title_activity_login_assistance"
@@ -139,7 +139,7 @@
             android:windowSoftInputMode="stateHidden|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.login.LoginActivity"/>
+                android:value="com.americanwell.sdksample.login.LoginActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.registration.RegistrationActivity"
@@ -149,7 +149,7 @@
             android:windowSoftInputMode="stateHidden|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.login.LoginActivity"/>
+                android:value="com.americanwell.sdksample.login.LoginActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.messages.InboxActivity"
@@ -159,7 +159,7 @@
             android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.home.HomeActivity"/>
+                android:value="com.americanwell.sdksample.home.HomeActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.messages.SentMessagesActivity"
@@ -168,13 +168,13 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.home.HomeActivity"/>
+                android:value="com.americanwell.sdksample.home.HomeActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.messages.MessageDetailActivity"
             android:label="@string/title_activity_message_detail"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.americanwell.sdksample.messages.MessageDraftActivity"
             android:label="@string/title_activity_message_draft"
@@ -183,7 +183,7 @@
             android:windowSoftInputMode="stateHidden|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.messages.MessageDetailActivity"/>
+                android:value="com.americanwell.sdksample.messages.MessageDetailActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.appointments.AppointmentsActivity"
@@ -192,7 +192,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.home.HomeActivity"/>
+                android:value="com.americanwell.sdksample.home.HomeActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.visit.VisitReportsActivity"
@@ -201,7 +201,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.home.HomeActivity"/>
+                android:value="com.americanwell.sdksample.home.HomeActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.visit.VisitReportDetailActivity"
@@ -210,7 +210,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.visit.VisitReportsActivity"/>
+                android:value="com.americanwell.sdksample.visit.VisitReportsActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.appointments.AppointmentActivity"
@@ -220,7 +220,7 @@
             android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.appointments.AppointmentsActivity"/>
+                android:value="com.americanwell.sdksample.appointments.AppointmentsActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.documents.HealthDocumentsActivity"
@@ -229,7 +229,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.home.HomeActivity"/>
+                android:value="com.americanwell.sdksample.home.HomeActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.services.ServiceActivity"
@@ -238,117 +238,98 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.home.HomeActivity"/>
+                android:value="com.americanwell.sdksample.home.HomeActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.services.ProviderActivity"
             android:label="@string/title_activity_provider"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.profile.AddDependentActivity"
             android:label="@string/title_activity_add_dependent"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-        </activity>
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.intake.TriageQuestionsActivity"
             android:label="@string/title_activity_triage_questions"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-        </activity>
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.profile.UpdateInsuranceActivity"
             android:label="@string/title_activity_update_insurance"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-        </activity>
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.health.VitalsActivity"
             android:label="@string/title_activity_vitals"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-        </activity>
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.health.MedicalHistoryActivity"
             android:label="@string/title_activity_medical_history"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.health.MedicationsActivity"
             android:label="@string/title_activity_medications"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.health.AddMedicationActivity"
             android:label="@string/title_activity_add_medication"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name="com.americanwell.sdksample.health.AllergiesActivity"
             android:label="@string/title_activity_allergies"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.profile.PharmacyActivity"
             android:label="@string/title_activity_pharmacy"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-        </activity>
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.profile.FindPharmacyActivity"
             android:label="@string/title_activity_find_pharmacy"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name="com.americanwell.sdksample.cost.VisitCostActivity"
             android:label="@string/title_activity_visit_cost"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-        </activity>
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.profile.AddCreditCardActivity"
             android:label="@string/title_activity_add_credit_card"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-        </activity>
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.visit.WaitingRoomActivity"
             android:label="@string/title_activity_waiting_room"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize">
-        </activity>
+            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.visit.GuestWaitingRoomActivity"
             android:label="@string/title_activity_waiting_room"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name="com.americanwell.sdksample.visit.VisitSummaryActivity"
             android:label="@string/title_activity_visit_summary"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.visit.IVRActivity"
             android:label="@string/title_activity_ivr"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.intake.FirstAvailableActivity"
             android:label="@string/title_activity_first_available"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity
             android:name="com.americanwell.sdksample.home.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name="com.americanwell.sdksample.profile.UpdateConsumerActivity"
             android:label="@string/title_activity_update_consumer"
@@ -357,18 +338,16 @@
             android:windowSoftInputMode="stateHidden|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.home.HomeActivity"/>
+                android:value="com.americanwell.sdksample.home.HomeActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.services.AppointmentScheduledActivity"
             android:label="@string/title_activity_appointment_scheduled"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name="com.americanwell.sdksample.services.ScheduleAppointmentActivity"
             android:label="@string/title_activity_schedule_appointment"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name="com.americanwell.sdksample.profile.UpdateDependentActivity"
             android:label="@string/title_activity_update_dependent"
@@ -377,7 +356,7 @@
             android:windowSoftInputMode="stateHidden|adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.home.HomeActivity"/>
+                android:value="com.americanwell.sdksample.home.HomeActivity" />
         </activity>
         <activity
             android:name="com.americanwell.sdksample.login.OutstandingDisclaimerActivity"
@@ -386,8 +365,9 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.americanwell.sdksample.login.LoginActivity"/>
+                android:value="com.americanwell.sdksample.login.LoginActivity" />
         </activity>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.provider"
@@ -395,22 +375,26 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
+
         <activity
             android:name="com.americanwell.sdksample.visit.VisitFinishedActivity"
             android:label="@string/title_activity_visit_finished"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name="com.americanwell.sdksample.visit.GuestFinishedActivity"
             android:label="@string/title_activity_guest_finished"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name="com.americanwell.sdksample.readiness.TechCheckActivity"
             android:label="@string/title_activity_tech_check"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity
+            android:name="com.televisit.SDKOptionsActivity"
+            android:label="@string/mycare_now"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
