--- a/MyHome/app/src/main/AndroidManifest.xml
+++ b/MyHome/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".features.enrollment.EnrollmentActivity"
             android:label="New Enrollment"
@@ -102,7 +102,7 @@
             </intent-filter>
         </activity>
 
-        <!--AWSDK-->
+        <!-- AWSDK -->
         <activity
             android:name="com.americanwell.sdksample.login.LoginActivity"
             android:label="@string/app_name"
@@ -112,6 +112,7 @@
                 <data
                     android:host="americanwellsdk.com"
                     android:scheme="amwellsdk" />
+
                 <category android:name="android.intent.category.BROWSABLE" />
             </intent-filter>
         </activity>
@@ -244,92 +245,92 @@
             android:name="com.americanwell.sdksample.services.ProviderActivity"
             android:label="@string/title_activity_provider"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.profile.AddDependentActivity"
             android:label="@string/title_activity_add_dependent"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.intake.TriageQuestionsActivity"
             android:label="@string/title_activity_triage_questions"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.profile.UpdateInsuranceActivity"
             android:label="@string/title_activity_update_insurance"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.health.VitalsActivity"
             android:label="@string/title_activity_vitals"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.health.MedicalHistoryActivity"
             android:label="@string/title_activity_medical_history"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.health.MedicationsActivity"
             android:label="@string/title_activity_medications"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.health.AddMedicationActivity"
             android:label="@string/title_activity_add_medication"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.americanwell.sdksample.health.AllergiesActivity"
             android:label="@string/title_activity_allergies"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.profile.PharmacyActivity"
             android:label="@string/title_activity_pharmacy"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.profile.FindPharmacyActivity"
             android:label="@string/title_activity_find_pharmacy"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.americanwell.sdksample.cost.VisitCostActivity"
             android:label="@string/title_activity_visit_cost"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.profile.AddCreditCardActivity"
             android:label="@string/title_activity_add_credit_card"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.visit.WaitingRoomActivity"
             android:label="@string/title_activity_waiting_room"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateHidden|adjustResize"></activity>
+            android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.visit.GuestWaitingRoomActivity"
             android:label="@string/title_activity_waiting_room"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.americanwell.sdksample.visit.VisitSummaryActivity"
             android:label="@string/title_activity_visit_summary"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.visit.IVRActivity"
             android:label="@string/title_activity_ivr"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.intake.FirstAvailableActivity"
             android:label="@string/title_activity_first_available"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize"></activity>
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name="com.americanwell.sdksample.home.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.americanwell.sdksample.profile.UpdateConsumerActivity"
             android:label="@string/title_activity_update_consumer"
@@ -343,11 +344,11 @@
         <activity
             android:name="com.americanwell.sdksample.services.AppointmentScheduledActivity"
             android:label="@string/title_activity_appointment_scheduled"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.americanwell.sdksample.services.ScheduleAppointmentActivity"
             android:label="@string/title_activity_schedule_appointment"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.americanwell.sdksample.profile.UpdateDependentActivity"
             android:label="@string/title_activity_update_dependent"
@@ -381,20 +382,23 @@
         <activity
             android:name="com.americanwell.sdksample.visit.VisitFinishedActivity"
             android:label="@string/title_activity_visit_finished"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.americanwell.sdksample.visit.GuestFinishedActivity"
             android:label="@string/title_activity_guest_finished"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="com.americanwell.sdksample.readiness.TechCheckActivity"
             android:label="@string/title_activity_tech_check"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name="com.televisit.SDKOptionsActivity"
             android:label="@string/mycare_now"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name="com.televisit.summary.SummaryActivity"
+            android:label="@string/title_activity_summary"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
