--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -381,6 +381,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'frankiesardo:icepick:3.2.0'
     compile 'com.auth0.android:jwtdecode:1.1.1'
+    compile 'com.github.myinnos:AlphabetIndex-Fast-Scroll-RecyclerView:1.0.8'
     annotationProcessor 'frankiesardo:icepick-processor:3.2.0'
     provided 'frankiesardo:icepick-processor:3.2.0'
 }
