--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -347,16 +347,23 @@ dependencies {
     compile 'com.squareup:otto:1.3.8'
     compile 'com.google.maps.android:android-maps-utils:0.5'
     compile 'com.getkeepsafe.taptargetview:taptargetview:1.9.1'
+    compile 'com.github.myinnos:AlphabetIndex-Fast-Scroll-RecyclerView:1.0.8'
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.12.0'
 
     implementation project(':sdk')
 
     //Need for AmWell
+    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.1'
-    compile 'com.github.myinnos:AlphabetIndex-Fast-Scroll-RecyclerView:1.0.8'
-    compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
+//    compile 'com.android.support:support-annotations:25.3.1'
+//    compile 'com.google.android.gms:play-services-base:10.2.1'
+//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'frankiesardo:icepick:3.2.0'
+//    compile 'com.auth0.android:jwtdecode:1.1.1'
+    annotationProcessor 'frankiesardo:icepick-processor:3.2.0'
+    provided 'frankiesardo:icepick-processor:3.2.0'
 }
