--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -57,6 +57,13 @@ android {
     def AUTHTOKEN = "third_party_auth_token"
     def AUTHURL = "third_party_auth_url"
 
+    def DEV_AWSDK_URL = "\"https://sdk.myonlinecare.com\""
+    def DEV_AWSDK_KEY = "\"8ff96c2a\""
+
+    def IOT_AWSDK_URL = "\"https://iot21.amwellintegration.com\""
+    def IOT_AWSDK_KEY = "\"1b1ddea8\""
+
+
     compileSdkVersion 26
     buildToolsVersion '26.0.2'
     defaultConfig {
@@ -171,8 +178,8 @@ android {
             buildConfigField STRING, "P_GRANT_TYPE_REFRESH", "\"refresh_token\""
 
             //AWSDK
-            buildConfigField STRING, AWSDKURL, "\"https://sdk.myonlinecare.com\""
-            buildConfigField STRING, AWSDKKEY, "\"8ff96c2a\""
+            buildConfigField STRING, AWSDKURL, IOT_AWSDK_URL
+            buildConfigField STRING, AWSDKKEY, IOT_AWSDK_KEY
             buildConfigField BOOLEAN, ENABLEAUTH, FALSE
             buildConfigField STRING, AUTHTOKEN, "\"at1001\""
             buildConfigField STRING, AUTHURL, "\"api.samsungosp.com\""
@@ -240,8 +247,8 @@ android {
             buildConfigField STRING, "P_GRANT_TYPE_REFRESH", "\"refresh_token\""
 
             //AWSDK
-            buildConfigField STRING, AWSDKURL, "\"https://sdk.myonlinecare.com\""
-            buildConfigField STRING, AWSDKKEY, "\"8ff96c2a\""
+            buildConfigField STRING, AWSDKURL, IOT_AWSDK_URL
+            buildConfigField STRING, AWSDKKEY, IOT_AWSDK_KEY
             buildConfigField BOOLEAN, ENABLEAUTH, FALSE
             buildConfigField STRING, AUTHTOKEN, "\"at1001\""
             buildConfigField STRING, AUTHURL, "\"api.samsungosp.com\""
@@ -310,9 +317,8 @@ android {
             buildConfigField STRING, "P_GRANT_TYPE_REFRESH", "\"refresh_token\""
 
             //AWSDK
-            //TODO These are just Debug's values. Need to get values for Stage/Prod (IoT?)
-            buildConfigField STRING, AWSDKURL, "\"https://sdk.myonlinecare.com\""
-            buildConfigField STRING, AWSDKKEY, "\"8ff96c2a\""
+            buildConfigField STRING, AWSDKURL, DEV_AWSDK_URL
+            buildConfigField STRING, AWSDKKEY, DEV_AWSDK_KEY
             buildConfigField BOOLEAN, ENABLEAUTH, FALSE
             buildConfigField STRING, AUTHTOKEN, "\"at1001\""
             buildConfigField STRING, AUTHURL, "\"api.samsungosp.com\""
