Updated AmWell SDK to 3.2.1

--- a/MyHome/app/build.gradle
+++ b/MyHome/app/build.gradle
@@ -363,19 +363,18 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.12.0'
 
-    implementation project(':sdk')
-
     //Need for AmWell
+    implementation project(':awsdk')
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.2.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.8'
     compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.1'
-//    compile 'com.android.support:support-annotations:25.3.1'
-//    compile 'com.google.android.gms:play-services-base:10.2.1'
-//    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    //    compile 'com.android.support:support-annotations:25.3.1'
+    //    compile 'com.google.android.gms:play-services-base:10.2.1'
+    //    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'frankiesardo:icepick:3.2.0'
-//    compile 'com.auth0.android:jwtdecode:1.1.1'
+    //    compile 'com.auth0.android:jwtdecode:1.1.1'
     annotationProcessor 'frankiesardo:icepick-processor:3.2.0'
     provided 'frankiesardo:icepick-processor:3.2.0'
 }
